[project]
name = "benchmark"
version = "1.0"
description = "Benchmarking tool for evaluating machine performance for data science tasks."
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "psutil>=5.9.0",
    # PyTorch avec détection automatique de plateforme
    "torch>=2.7.1; sys_platform == 'darwin'",
    "torch>=2.7.1; sys_platform == 'win32'",
]

# Configuration uv pour sources PyTorch conditionnelles
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true